add volumeMounts support, load service doc by ingress to a centralized swagger-ui container
