# swagger.yaml
@@ -1,8 +1,8 @@
 swagger: "2.0"
 
 info:
-  description: Kubernetes service configuration service
   title: Kruise
+  description: Kubernetes service configurator
   version: 0.0.1
 
 consumes:
@@ -231,6 +231,12 @@ definitions:
           type: string
       env:
         $ref: "#/definitions/env"
+        x-nullable: false
+      volumeMounts:
+        type: array
+        items:
+          $ref: "#/definitions/volumeMounts"
+        x-nullable: true
     required:
       - image
 
@@ -247,6 +253,27 @@ definitions:
         items:
           $ref: "#/definitions/valueFrom"
         x-nullable: true
+
+  volumeMounts:
+    type: object
+    properties:
+      name:
+        type: string
+        x-nullable: false
+      mountPath:
+        type: string
+        x-nullable: false
+      readOnly:
+        type: boolean
+        default: true
+      configMap:
+        type: string
+        x-nullable: false
+    required:
+      - name
+      - mountPath
+      - readOnly
+      - configMap
 
   dependencies:
     type: object
@@ -267,12 +294,8 @@ definitions:
       swagger:
         type: boolean
         default: true
-      secretLoader:
-        type: boolean
-        default: true
     default:
       swagger: true
-      secretLoader: true
 
   value:
     type: object
@@ -290,7 +313,7 @@ definitions:
     required:
       - name
       - value
-      
+
   valueFrom:
     type: object
     properties:
@@ -304,7 +327,7 @@ definitions:
     required:
       - name
       - valueRef
-      
+
   valueRef:
     type: object
     properties:
